--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unit10hw",
   "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
+  "description": "OOP and testing - week 10 homework",
   "main": "app.js",
   "directories": {
     "lib": "lib",
@@ -12,14 +12,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+    "url": "git+https://github.com/rfazily/homework-ten.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
-  },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "homepage": "https://github.com/rfazily/homework-ten.git",
   "dependencies": {
     "inquirer": "^6.3.1"
   },
